# cmake-practice

./: README.md
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  controller.cpp  controller.h
src/entrypoint/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  model.cpp  model.h
src/sub-entrypoint/: CMakeLists.txt  sub_main.cpp
src/view/: CMakeLists.txt  view.cpp  view.h
